Fix menu overflow (#4090)
* Fix menu overflow

* There must be a better solution

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -638,7 +638,7 @@ input[type="number"] {
 }
 .tab_container {
     transition: all 0.2s;
-    width: 13rem;
+    width: 17rem;
     overflow: auto;
     padding: 1rem;
     padding-right: 0.5rem;
